--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -8,8 +8,13 @@
 <body>
     <h1>留言板</h1>
     <div>
-        <a herf="/">首頁</a>
-        <a herf="% url 'msg_create' %">新增留言</a>
+        <a href="/">首頁</a>
+        <a href="{% url 'msg_create' %}">新增留言</a>
+        {% if user.is_authenticated %}
+            {{ user.username }} <a href="{% url 'logout' %}">登出</a>
+        {% else %}
+            <a href="{% url 'login' %}">登入</a>
+        {% endif %}
     </div>
     <div>
         {% block content %}{% endblock %}
